--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <meta charset="utf-8">
-      <title>Movie Theater WebVR Virtual Reality Experience Dying Light</title>
+      <title>Pick Movies</title>
       <meta name="author" content="Donovan Kraeker">
       <meta name="description" content="A Movie Theater WebVR virtual reality example website experience using A-Frame designed by Donovan Kraeker">
       <script src="https://aframe.io/releases/0.2.0/aframe.min.js"></script>
