--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
          <!-- Side Walls -->
          <a-entity geometry=" primitive: box; depth: 0.1; height: 12; width: 24" position="11 6.5 2" rotation="0 90 0" 
 
-         material="shader: standard; roughness: 1; src: url(images/wall.jpg)">
+         material="shader: standard; roughness: 1; src: url(images/wall1.jpg)">
             
          </a-entity>
          
