--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
          <!-- Ground highlight --><!-- Ceiling Floor -->
          <a-entity geometry=" primitive: plane; height: 24; width: 22" position="0 0.5 2" rotation="-90 0 0" 
 
-         material="shader: flat; roughness: 1; src: url(images/floor.jpg)">
+         material="shader: flat; roughness: 1; src: url(images/floor1.png)">
             
          </a-entity>
          
