--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
          material="shader: standard; side: bottom; src: url(images/sky.jpg)">
             
          </a-entity>
+         <!-- Box in the center -->
+         <a-entity geometry=" primitive: box; depth: 0.1" position="0 0 0" material="shader: standard; color: white"></a-entity>
          
          <!-- Front Back Walls -->
          <a-entity geometry=" primitive: box; depth: 0.1; height: 12; width: 22" position="0 6.5 -10" material="shader: standard; color: #000"></a-entity>
