--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             
          </a-entity>
          <!-- Box in the center -->
-         <a-entity geometry=" primitive: box; depth: 0.1" position="0 5 0" material="shader: standard; color: white"></a-entity>
+         <a-entity geometry=" primitive: box; depth: 0.1 height : 6 ; width : 6" position="0 5 0" material="shader: standard; color: white"></a-entity>
          
          <!-- Front Back Walls -->
          <a-entity geometry=" primitive: box; depth: 0.1; height: 12; width: 22" position="0 6.5 -10" material="shader: standard; color: #000"></a-entity>
