--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
    </head>
    <body>
       <a-scene>
-         <a-entity>
+         <a-camera>
             <a-cursor></a-cursor>
-         </a-entity>
+         </a-camera>
          <a-entity camera position="0 1.7 7.5" look-controls="enabled: true" cursor-visible="enabled: false" wasd-controls="enabled: true"></a-entity>
          
          <!-- Ground highlight --><!-- Ceiling Floor -->
