--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             
          </a-entity>
          
-        <a-model src="models/sofa.dae" scale="1 1 1" position="0 0.35 7.6" rotation="0 90 0">
+        <a-model src="models/ghost.obj" scale="1 1 1" position="0 0.35 7.6" rotation="0 90 0">
         <a-sound src="sounds/scarySfx.mp3" autoplay ="true" position="0 0.35 7.6"></a-sound>
          </a-model>
          <!-- Lighting and background -->
