--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
          
         <a-model src="models/soda.dae" scale="1 1 1" position="0 0.35 7.6" rotation="0 90 0"></a-model>
       
-        <!-- Sound Asset-->
+        <!-- Asset Management -->
         <a-assets>
         <audio id="scary" src="scarySfx.mp3"></audio>
         </a-assets>
