--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
    </head>
    <body>
+      <embed src="sounds/scarySfx.mp3" autostart></embed>
       <a-scene>
   
             
