--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
    </head>
    <body>
-      <embed src="sounds/scarySfx.mp3" autostart loop="true"></embed>
+      <embed src="sounds/scarySfx.mp3" autostart="true" loop="true"></embed>
       <a-scene>
          <a-entity camera position="0 1.7 7.5" look-controls="enabled: true" cursor-visible="enabled: true" wasd-controls="enabled: true">
          <a-cursor></a-cursor>
