--- a/index.html
+++ b/index.html
@@ -165,6 +165,8 @@
          
          <!-- Lighting and background -->
          <a-sky color="white"></a-sky>
+   
+   <!-- Please refresh when the sound and video is not playing -->
       </a-scene>
    </body>
 </html>
